--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 							<div class="row"> 
 								<exphead>UC Berkeley Society of Women Engineers</exphead>
 								<div class="6u"><expdate> August 2014 - Present</expdate></div>
-								<h6> I am a part of the <a href="http://swe.berkeley.edu/">UC Berkeley Society of Women Engineers</a> Corporate Committee. As part of the Corporate Committee I help organize and plan the Shadow and Engineer Event.  I helped recruit and email companies, create the online forms, and reach out to students to advertise the event.  For all of my hardwork, I won the outstanding memeber award in December 2014.  As part of the Society of Women Engineers, I attend all meetings, most infosessions, and special events including Evening with Industry.</h6>
+								<h6> I am a part of the <a href="http://swe.berkeley.edu/">UC Berkeley Society of Women Engineers</a> Corporate Committee. As part of the Corporate Committee I help organize and plan the Shadow and Engineer Event.  I helped recruit and email companies, create the online forms, and reach out to students to advertise the event.  For all of my hardwork, I won the outstanding member award in December 2014.  As part of the Society of Women Engineers, I attend all meetings, most infosessions, and special events including Evening with Industry.</h6>
 							</div>
 							<div class="row"> 
 								<div class=""> <exphead>CS61A Lab Assistant / Academic Intern</exphead></div>
