--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 							<div class="row"> 
 								<div class=""> <exphead>UC Berkeley Computer Science Scholars</exphead></div>
 								<div class="6u"><expdate> January 2014 - Present</expdate></div>
-								<h6> I was one of 25 students chosen to be a part of the second cohort of <a href="http://cs-scholars.berkeley.edu/">UC Berkeley Computer Science Scholars</a>.  CS Scholars helps promote diversity among the CS field and all the scholars were enrolled in a supplemental computer science seminar.  In seminar we often learned about various ideas behind computer science, worked on projects, and had extra review sessions together.  Through CS Scholars I was able to meet a dedicate group of individuals with the same passion I have for computer science.</h6>
+								<h6> I was one of 25 students chosen to be a part of the second cohort of <a href="http://cs-scholars.berkeley.edu/">UC Berkeley Computer Science Scholars</a>.  CS Scholars helps promote diversity among the CS field and all the scholars were enrolled in a supplemental computer science seminar.  In seminar we often learned about various ideas behind computer science, worked on projects, and had extra review sessions together.  Through CS Scholars I was able to meet a dedicated group of individuals with the same passion I have for computer science.</h6>
 							</div>
 							<div class="row"> 
 								<div class=""> <exphead>Yang Fan Academy Web Design Teacher</exphead></div>
