Updated personal projects page

--- a/personalproj.html
+++ b/personalproj.html
@@ -96,6 +96,13 @@
 								<a href="https://github.com/michellekoo/personal-website" class="buttonprojsmaller">Code</a></div>
 							</div>
 							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/ally.jpg" alt="" /></a></div>
+								<div class=""> <h5>Ally's Website</h5></div>
+								<div class="6u"> <h6>I made this personal website for my sister, Ally. The original template came from <a href="http://html5up.net">HTML5 UP</a>, but I modified the HTML and CSS to the way it appears now.  All the graphics are my own and I edited them with Photoshop.</h6>
+								<a href="http://99.100.34.118/~akoo" class="buttonprojsmaller">Website</a>
+								<a href="https://github.com/michellekoo/Ally-website" class="buttonprojsmaller">Code</a></div>
+							</div>
+							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/autotext.jpg" alt="" /></a></div>
 								<div class=""> <h5>AutoText</h5></div>
 								<div class="6u"> <h6>This project is in progress, but was created as our CS Scholars project at UC Berkeley.  It is an Android app programmed in Java meant to act as an automatic reply to text messages when the user is too busy to respond.</h6>
