Added binary calculator to personal projects and changed descriptions and order of Ally’s website and personal website.

--- a/personalproj.html
+++ b/personalproj.html
@@ -89,18 +89,25 @@
 								<h2>Personal Projects</h2>
 							</header>
 							<div class="row">
-								<div class=""><a href="#" class="image left"><img src="images/personalweb.jpg" alt="" /></a></div>
-								<div class=""> <h5>Personal Website</h5></div>
-								<div class="6u"> <h6>My personal website that I created as a portfolio to reflect all of my projects and experience activities I have worked on throughout my career. The original template came from <a href="http://html5up.net">HTML5 UP</a>, but I modified the HTML and CSS to the way it appears now.  All the graphics are my own and I edited them with Photoshop.</h6>
-								<a href="index.html" class="buttonprojsmaller">Website</a>
-								<a href="https://github.com/michellekoo/personal-website" class="buttonprojsmaller">Code</a></div>
+								<div class=""><a href="#" class="image left"><img src="images/binary.jpg" alt="" /></a></div>
+								<div class=""> <h5>Binary Conversion</h5></div>
+								<div class="6u"> <h6>I created a binary conversion calculator that converts positive base ten decimal numbers to binary.  It also converts positive base two binary numbers to decimal.  I used JavaScript, HTML, and CSS.</h6>
+								<a href="binarycalc.html" class="buttonproj">Application</a>
+								<a href="https://github.com/michellekoo/js-binarycalc" class="buttonprojsmaller">Code</a></div>
 							</div>
 							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/ally.jpg" alt="" /></a></div>
 								<div class=""> <h5>Ally's Website</h5></div>
-								<div class="6u"> <h6>I made this personal website for my sister, Ally. The original template came from <a href="http://html5up.net">HTML5 UP</a>, but I modified the HTML and CSS to the way it appears now.  All the graphics are my own and I edited them with Photoshop.</h6>
-								<a href="http://99.100.34.118/~akoo" class="buttonprojsmaller">Website</a>
+								<div class="6u"> <h6>I made this personal website for my sister, Ally, with HTML and CSS.  All the graphics are my own and I edited them with Photoshop. This website can be viewed on <a href="http://koofamily.synology.me/~akoo">http://koofamily.synology.me/~akoo</a></h6>
+								<a href="http://koofamily.synology.me/~akoo" class="buttonprojsmaller">Website</a>
 								<a href="https://github.com/michellekoo/Ally-website" class="buttonprojsmaller">Code</a></div>
+							</div>
+							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/personalweb.jpg" alt="" /></a></div>
+								<div class=""> <h5>Personal Website</h5></div>
+								<div class="6u"> <h6>My personal website that I created as a portfolio to reflect all of my projects and experience activities I have worked on throughout my career. I created this with HTML and CSS and all graphics are my own. My website can be viewed on two hosts: <a href="http://michellekoo.github.io">http://michellekoo.github.io</a> and <a href="http://koofamily.synology.me/~mkoo">http://koofamily.synology.me/~mkoo</a></h6>
+								<a href="index.html" class="buttonprojsmaller">Website</a>
+								<a href="https://github.com/michellekoo/personal-website" class="buttonprojsmaller">Code</a></div>
 							</div>
 							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/autotext.jpg" alt="" /></a></div>
