Changed class project application buttons to have email functionality.

--- a/classproj.html
+++ b/classproj.html
@@ -97,28 +97,28 @@
 								<div class=""> <h5>2048</h5></div>
 								<div class="6u"> <h6>I created a replica of 2048 in Java with Professor Hilfinger and Professor Hug in CS61B. The goal of the game is to add matching numbers until at least one tile reaches an additive sum of 2048.  New tiles appear after each move and each new tile is either a 2 or a 4.</h6>
 								<a href="https://inst.eecs.berkeley.edu/~cs61b/fa14/hw/proj0.pdf" class="buttonprojsmaller">Spec</a>
-								<a href="#" class="buttonproj">Application</a></div>
+								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
 							</div>
 							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/db61b.jpg" alt="" /></a></div>
 								<div class=""> <h5>DB61B System</h5></div>
 								<div class="6u"> <h6>I created a command line database system in Java with Professor Hilfinger and Professor Hug in CS61B.  DB61B System is a relational database management system that stores and selects information from tables of data.</h6>
 								<a href="https://inst.eecs.berkeley.edu/~cs61b/fa14/hw/proj1.pdf" class="buttonprojsmaller">Spec</a> 
-								<a href="#" class="buttonproj">Application</a></div>
+								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
 							</div>
 							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/jump.jpg" alt="" /></a></div>
 								<div class=""> <h5>Jumping Cubes</h5></div>
 								<div class="6u"> <h6>I created a replica of the game Jumping Cubes in Java with Professor Hilfinger and Professor Hug in CS61B.  I built both the GUI version and the command line version of the game with both manual players and AI players.  The game is over when one color completely fills the board. I learned about AI game trees and heuristics.</h6>
 								<a href="https://inst.eecs.berkeley.edu/~cs61b/fa14/hw/proj2.pdf" class="buttonprojsmaller">Spec</a>
-								<a href="#" class="buttonproj">Application</a></div>
+								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
 							</div>
 							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/graph.jpg" alt="" /></a></div>
 								<div class=""> <h5>Graph API  & Clients</h5></div>
 								<div class="6u"> <h6>I created a graph package API that includes traversals, breadth first search, and depth first search in Java with Professor Hiflinger and Professor Hug in CS61B. A replica of a Makefile and a Trip application were clients created with this API.  The Trip application finds the shortest path between two locations using A* search.</h6>
 								<a href="https://inst.eecs.berkeley.edu/~cs61b/fa14/hw/proj3.pdf" class="buttonprojsmaller">Spec</a>
-								<a href="#" class="buttonproj">Application</a></div>
+								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
 							</div>
 							<header>
 								<h4> <span><a href="http://www-inst.eecs.berkeley.edu/~cs61a/sp14/"> CS61A: The Structure and Interpretation of Computer Programs </a></span></h4>
@@ -128,28 +128,28 @@
 								<div class=""> <h5>The Game of Hog</h5></div>
 								<div class="6u"> <h6>I created The Game of Hog in Python with Professor Hilfinger in CS61A. It is a dice game between two players where the goal is to reach 100 points first.  For this project I learned about conditionals and boolean logic.  I also had to come up with my own overall strategy to yield a win rate of at least 59%.</h6>
 								<a href="http://www-inst.eecs.berkeley.edu/~cs61a/sp14/proj/hog/hog.html" class="buttonprojsmaller">Spec</a>
-								<a href="#" class="buttonproj">Application</a></div>
+								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
 							</div>
 							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/trends.jpg" alt="" /></a></div>
 								<div class=""> <h5>Twitter Trends</h5></div>
 								<div class="6u"> <h6>I created Twitter Trends in Python with Professor Hilfinger in CS61A.  This project assigns sentiments to each filtered tweet that is either positive or negative based on the syntax of the tweet.  It produces a map and colors each state based on the sentiment of the tweets relating to the filtered key word.</h6>
 								<a href="hhttp://www-inst.eecs.berkeley.edu/~cs61a/sp14/proj/trends/trends.html" class="buttonprojsmaller">Spec</a> 
-								<a href="#" class="buttonproj">Application</a></div>
+								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
 							</div>
 							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/ants.jpg" alt="" /></a></div>
 								<div class=""> <h5>Ants vs. Bees</h5></div>
 								<div class="6u"> <h6>I created the game Ants vs. Bees in Python with Professor Hilfinger in CS61A.  This is a tower defense game in which the ants must protect the queen ant from the bees.  For this project I learned heavily about object oriented programming.</h6>
 								<a href="http://www-inst.eecs.berkeley.edu/~cs61a/sp14/proj/trends/trends.html" class="buttonprojsmaller">Spec</a>
-								<a href="#" class="buttonproj">Application</a></div>
+								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
 							</div>
 							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/scheme.jpg" alt="" /></a></div>
 								<div class=""> <h5>Scheme Interpreter</h5></div>
 								<div class="6u"> <h6>I created a Scheme interpreter terminal application in Python with Professor Hilfinger in CS61A.  I had to learn Scheme in this project in order to be able to parse and evaluate the tokens in Python.  I also had to write comprehensive programs in Scheme in order to test the functionality of my Scheme interpreter.</h6>
 								<a href="http://www-inst.eecs.berkeley.edu/~cs61a/sp14/proj/scheme/scheme.html" class="buttonprojsmaller">Spec</a>
-								<a href="#" class="buttonproj">Application</a></div>
+								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
 							</div>
 							
 						</div>
