--- a/personalproj.html
+++ b/personalproj.html
@@ -89,6 +89,13 @@
 								<h2>Personal Projects</h2>
 							</header>
 							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/cscalc.jpg" alt="" /></a></div>
+								<div class=""> <h5>CS GPA Calculator</h5></div>
+								<div class="6u"> <h6>I created a UC Berkeley Computer Science GPA calculator that calculates a student's pre-requesite GPA to determine if they can declare.  I used JavaScript, HTML, and CSS.</h6>
+								<a href="cscalc.html" class="buttonproj">Application</a>
+								<a href="https://github.com/michellekoo/js-binarycalc" class="buttonprojsmaller">Code</a></div>
+							</div>
+							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/binary.jpg" alt="" /></a></div>
 								<div class=""> <h5>Binary Conversion</h5></div>
 								<div class="6u"> <h6>I created a binary conversion calculator that converts positive base ten decimal numbers to binary.  It also converts positive base two binary numbers to decimal.  I used JavaScript, HTML, and CSS.</h6>
