--- a/personalproj.html
+++ b/personalproj.html
@@ -93,7 +93,7 @@
 								<div class=""> <h5>CS GPA Calculator</h5></div>
 								<div class="6u"> <h6>I created a UC Berkeley Computer Science GPA calculator that calculates a student's pre-requesite GPA to determine if they can declare.  I used JavaScript, HTML, and CSS.</h6>
 								<a href="cscalc.html" class="buttonproj">Application</a>
-								<a href="https://github.com/michellekoo/js-binarycalc" class="buttonprojsmaller">Code</a></div>
+								<a href="https://github.com/michellekoo/cs-calc" class="buttonprojsmaller">Code</a></div>
 							</div>
 							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/binary.jpg" alt="" /></a></div>
