--- a/personalproj.html
+++ b/personalproj.html
@@ -89,6 +89,13 @@
 								<h2>Personal Projects</h2>
 							</header>
 							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/gpacalc.jpg" alt="" /></a></div>
+								<div class=""> <h5>UC Berkeley GPA Calculator</h5></div>
+								<div class="6u"> <h6>I created a UC Berkeley GPA calculator that calculates a student's overall GPA.  It allows the user to add more class textfields depending on how many classes the user has taken. I used JavaScript, HTML, and CSS.</h6>
+								<a href="gradecalc.html" class="buttonproj">Application</a>
+								<a href="https://github.com/michellekoo/gpa-calc" class="buttonprojsmaller">Code</a></div>
+							</div>
+							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/cscalc.jpg" alt="" /></a></div>
 								<div class=""> <h5>CS GPA Calculator</h5></div>
 								<div class="6u"> <h6>I created a UC Berkeley Computer Science GPA calculator that calculates a student's pre-requesite GPA to determine if they can declare.  I used JavaScript, HTML, and CSS.</h6>
