--- a/personalproj.html
+++ b/personalproj.html
@@ -105,7 +105,7 @@
 							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/cscalc.jpg" alt="" /></a></div>
 								<div class=""> <h5>CS GPA Calculator</h5></div>
-								<div class="6u"> <h6>I created a UC Berkeley Computer Science GPA calculator that calculates a student's pre-requesite GPA to determine if they can declare.  I used JavaScript, HTML, and CSS.</h6>
+								<div class="6u"> <h6>I created a UC Berkeley Computer Science GPA calculator that calculates a student's pre-requesite GPA to determine if they can declare.  Students need a 3.0 technical GPA to declare CS. I used JavaScript, HTML, and CSS.</h6>
 								<a href="cscalc.html" class="buttonproj">Application</a>
 								<a href="https://github.com/michellekoo/cs-calc" class="buttonprojsmaller">Code</a></div>
 							</div>
