--- a/personalproj.html
+++ b/personalproj.html
@@ -71,7 +71,7 @@
 							<li><a href="mailto:michellekoo@berkeley.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
 							<li><a href="https://www.linkedin.com/pub/michelle-koo/90/526/5" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/michellekoo" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="Resume.pdf" class="icon fa-briefcase"><span class="label">Resume</span></a></li>
+							<li><a href="Resume.pdf" class="icon fa-file"><span class="label">Resume</span></a></li>
 						</ul>
 				
 				</div>
