--- a/fortune.html
+++ b/fortune.html
@@ -110,7 +110,7 @@
 			fortune_text[45] = "Ask yourself if what you are doing today is getting you closer to where you want to be tomorrow.";
 			fortune_text[46] = "Help! I'm stuck in a Chinese cookie factory!";
 			fortune_text[47] = "Happiness is an activity.";
-			fortune_text[48] = "Stay true to your hear.";
+			fortune_text[48] = "Stay true to your heart.";
 			fortune_text[49] = "Don't be greedy.";
 			fortune_text[50] = "Your fortune is as sweet as a cookie.";
 			fortune_text[51] = "Integrity is the essence of everything successful.";
