Updated fortune cookie 2.0 fortunes.

--- a/fortune2.html
+++ b/fortune2.html
@@ -100,8 +100,51 @@
 			fortune_text[14] = "images/fortune15.gif";
 			fortune_text[15] = "images/fortune16.gif";
 			fortune_text[16] = "images/fortune17.gif";
+			fortune_text[17] = "images/fortune18.gif";
+			fortune_text[18] = "images/fortune19.gif";
+			fortune_text[19] = "images/fortune20.gif";
+			fortune_text[20] = "images/fortune21.gif";
+			fortune_text[21] = "images/fortune22.gif";
+			fortune_text[22] = "images/fortune23.gif";
+			fortune_text[23] = "images/fortune24.gif";
+			fortune_text[24] = "images/fortune25.gif";
+			fortune_text[25] = "images/fortune26.gif";
+			fortune_text[26] = "images/fortune27.gif";
+			fortune_text[27] = "images/fortune28.gif";
+			fortune_text[28] = "images/fortune29.gif";
+			fortune_text[29] = "images/fortune30.gif";
+			fortune_text[30] = "images/fortune31.gif";
+			fortune_text[31] = "images/fortune32.gif";
+			fortune_text[32] = "images/fortune33.gif";
+			fortune_text[33] = "images/fortune34.gif";
+			fortune_text[34] = "images/fortune35.gif";
+			fortune_text[35] = "images/fortune36.gif";
+			fortune_text[36] = "images/fortune37.gif";
+			fortune_text[37] = "images/fortune38.gif";
+			fortune_text[38] = "images/fortune39.gif";
+			fortune_text[39] = "images/fortune40.gif";
+			fortune_text[40] = "images/fortune41.gif";
+			fortune_text[41] = "images/fortune42.gif";
+			fortune_text[42] = "images/fortune43.gif";
+			fortune_text[43] = "images/fortune44.gif";
+			fortune_text[44] = "images/fortune45.gif";
+			fortune_text[45] = "images/fortune46.gif";
+			fortune_text[46] = "images/fortune47.gif";
+			fortune_text[47] = "images/fortune48.gif";
+			fortune_text[48] = "images/fortune49.gif";
+			fortune_text[49] = "images/fortune50.gif";
+			fortune_text[50] = "images/fortune51.gif";
+			fortune_text[51] = "images/fortune52.gif";
+			fortune_text[52] = "images/fortune53.gif";
+			fortune_text[53] = "images/fortune54.gif";
+			fortune_text[54] = "images/fortune55.gif";
+			fortune_text[55] = "images/fortune56.gif";
+			fortune_text[56] = "images/fortune57.gif";
+			fortune_text[57] = "images/fortune58.gif";
+			fortune_text[58] = "images/fortune59.gif";
+			fortune_text[59] = "images/fortune60.gif";
 
-			var i = Math.floor(17 * Math.random());
+			var i = Math.floor(60 * Math.random());
 			return (fortune_text[i]);
 		}
 
