Updated personal projects page to include fortune cookie me.

--- a/personalproj.html
+++ b/personalproj.html
@@ -89,6 +89,13 @@
 								<h2>Personal Projects</h2>
 							</header>
 							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/fortuneme.jpg" alt="" /></a></div>
+								<div class=""> <h5>Fortune Cookie Me!</h5></div>
+								<div class="6u"> <h6>I created a virtual fortune cookie application that allows the user to click on the fortune cookie to open it and discover their fortune.  This is Fortune Cookie Me! version 2.0. Version 1.0 can be found <a href="fortune.html">here</a> and the code <a href="https://github.com/michellekoo/fortune-cookie">here</a>.</h6>
+								<a href="fortune2.html" class="buttonproj">Application</a>
+								<a href="https://github.com/michellekoo/fortune-cookie-2.0" class="buttonprojsmaller">Code</a></div>
+							</div>
+							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/gpacalc.jpg" alt="" /></a></div>
 								<div class=""> <h5>UC Berkeley GPA Calculator</h5></div>
 								<div class="6u"> <h6>I created a UC Berkeley GPA calculator that calculates a student's overall GPA.  It allows the user to add more class textfields depending on how many classes the user has taken. I used JavaScript, HTML, and CSS.</h6>
