Updated fortune cookie description on personal projects page.

--- a/personalproj.html
+++ b/personalproj.html
@@ -91,7 +91,7 @@
 							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/fortuneme.jpg" alt="" /></a></div>
 								<div class=""> <h5>Fortune Cookie Me!</h5></div>
-								<div class="6u"> <h6>I created a virtual fortune cookie application that allows the user to click on the fortune cookie to open it and discover their fortune.  This is Fortune Cookie Me! version 2.0. Version 1.0 can be found <a href="fortune.html">here</a> and the code <a href="https://github.com/michellekoo/fortune-cookie">here</a>.</h6>
+								<div class="6u"> <h6>I created a virtual fortune cookie application that allows the user to click on the fortune cookie to open it and discover their fortune.  This is Fortune Cookie Me! version 2.0. Version 1.0 can be found <a href="fortune.html">here</a> and the code <a href="https://github.com/michellekoo/fortune-cookie">here</a>.  I used JavaScript, HTML, and CSS.</h6>
 								<a href="fortune2.html" class="buttonproj">Application</a>
 								<a href="https://github.com/michellekoo/fortune-cookie-2.0" class="buttonprojsmaller">Code</a></div>
 							</div>
