Added rock paper scissors to personal projects page.

--- a/personalproj.html
+++ b/personalproj.html
@@ -96,6 +96,13 @@
 								<a href="https://github.com/michellekoo/fortune-cookie-2.0" class="buttonprojsmaller">Code</a></div>
 							</div>
 							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/rps.jpg" alt="" /></a></div>
+								<div class=""> <h5>Rock Paper Scissors</h5></div>
+								<div class="6u"> <h6>I created a virtual rock paper scissors game that allows the user to play against the computer.  The computer chooses moves randomly so the user wins purely based upon chance. I used JavaScript, HTML, and CSS.</h6>
+								<a href="rps.html" class="buttonproj">Application</a>
+								<a href="https://github.com/michellekoo/rock-paper-scissors" class="buttonprojsmaller">Code</a></div>
+							</div>
+							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/gpacalc.jpg" alt="" /></a></div>
 								<div class=""> <h5>UC Berkeley GPA Calculator</h5></div>
 								<div class="6u"> <h6>I created a UC Berkeley GPA calculator that calculates a student's overall GPA.  It allows the user to add more class textfields depending on how many classes the user has taken. I used JavaScript, HTML, and CSS.</h6>
