--- a/personalproj.html
+++ b/personalproj.html
@@ -89,6 +89,20 @@
 								<h2>Personal Projects</h2>
 							</header>
 							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/hangmanapp.jpg" alt="" /></a></div>
+								<div class=""> <h5>Hangman</h5></div>
+								<div class="6u"> <h6>This Hangman web application was created at the UC Berkeley Hackjam with two teammates.  We used JavaScript, HTML, and CSS.  Words are chosen at random by the computer.</h6>
+								<a href="hangman.html" class="buttonproj">Application</a>
+								<a href="https://github.com/michellekoo/Hangman" class="buttonprojsmaller">Code</a></div>
+							</div>
+							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/companioncollege.jpg" alt="" /></a></div>
+								<div class=""> <h5>Companion College</h5></div>
+								<div class="6u"> <h6>I created an advertisement website for Companion College, which is a working prototype of a website to connect college bound students, college students, and alumni, and allow them to post and answer questions.  I used HTML, CSS, and Photoshop.</h6>
+								<a href="http://koofamily.synology.me/~econ_akoo/" class="buttonproj">Application</a>
+								<a href="https://github.com/michellekoo/companion_college" class="buttonprojsmaller">Code</a></div>
+							</div>
+							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/fortuneme.jpg" alt="" /></a></div>
 								<div class=""> <h5>Fortune Cookie Me!</h5></div>
 								<div class="6u"> <h6>I created a virtual fortune cookie application that allows the user to click on the fortune cookie to open it and discover their fortune.  This is Fortune Cookie Me! version 2.0. Version 1.0 can be found <a href="fortune.html">here</a> and the code <a href="https://github.com/michellekoo/fortune-cookie">here</a>.  I used JavaScript, HTML, and CSS.</h6>
