Fixed Hangman text box to clear after play

--- a/hangman.html
+++ b/hangman.html
@@ -239,6 +239,7 @@
 		}
 		function start() {
 			letter = document.getElementById("myText").value;
+			document.getElementById("myText").value = "";
 			if (check_input()) {
 			 	var indices = check_letter();
 			 	if (indices.length > 0) {
