Updated experience section

--- a/index.html
+++ b/index.html
@@ -160,11 +160,21 @@
 							<header>
 								<h2>Experience and Activities</h2>
 							</header>
-
+							<div class="row">
+								<div class="row"> 
+								<exphead>Chief Technology Officer of UC Berkeley UJPB</exphead>
+								<div class="6u"><expdate> January 2014 - Present</expdate></div>
+								<h6> I am the Chief Technology Officer of the <a href="http://ujpb.org">Undergraduate Journal of Psychology at Berkeley</a>. The Undergraduate Journal of Psychology at Berkeley is an annual publication that allows students who have done research and scientific studies in the field of psychology to publish their findings. As the Chief Technology Officer, I maintain and update the Journal's website.  The website is hosted by Wordpress and can be found at <a href="http://ujpb.org">http://ujpb.org</a>. I am also currently helping to set up a blog to provide a space to allow for deeper discussions about scientific research in psychology. </h6>
+							</div>
 							<div class="row"> 
 								<exphead>UC Berkeley Society of Women Engineers</exphead>
 								<div class="6u"><expdate> August 2014 - Present</expdate></div>
 								<h6> I am a part of the <a href="http://swe.berkeley.edu/">UC Berkeley Society of Women Engineers</a> Corporate Committee. As part of the Corporate Committee I help organize and plan the Shadow and Engineer Event.  I helped recruit and email companies, create the online forms, and reach out to students to advertise the event.  For all of my hardwork, I won the outstanding member award in December 2014.  As part of the Society of Women Engineers, I attend all meetings, most infosessions, and special events including Evening with Industry.</h6>
+							</div>
+							<div class="row">
+								<exphead>National Society of Leadership and Success</exphead>
+								<div class="6u"><expdate> March 2014 - Present</expdate></div>
+								<h6> I am a part of the <a href="https://www.societyleadership.org/">National Society of Leadership and Success</a>honor society at UC Berkeley.  I am currently working to be inducted and attend events such as orientation, leadership training day, speaker broadcasts, and success networking teams.  The National Society of Leadership and Success helps me plan out my future and future goals, while giving me incredible opportunitites and advice on how to attain my goals.</h6>
 							</div>
 							<div class="row"> 
 								<div class=""> <exphead>CS61A Lab Assistant / Academic Intern</exphead></div>
