Updated class projects and added map

--- a/classproj.html
+++ b/classproj.html
@@ -90,6 +90,37 @@
 							</header>
 							<p> If you would like to view the code of any of these projects please email me. </p>
 							<header>
+								<h4> <span> <a href="http://inst.eecs.berkeley.edu/~cs61c/sp15/">CS61C: Great Ideas in Computer Architecture (Machine Structures)</a></span></h4>
+							</header>
+							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/assembler.jpg" alt="" /></a></div>
+								<div class=""> <h5>MIPS Assembler</h5></div>
+								<div class="6u"> <h6>I created an assembler in C with Professor Asanovic and Professor Stojanovic in CS61C.  My assembler translates a subset of of the MIPS instruction set to machine code.  My assembler assembles eighteen different instructions and two pseudoinstructions.</h6>
+								<a href="http://inst.eecs.berkeley.edu/~cs61c/sp15/projs/01/" class="buttonprojsmaller">Spec</a>
+								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
+							</div>
+							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/linker.jpg" alt="" /></a></div>
+								<div class=""> <h5>MIPS Linker</h5></div>
+								<div class="6u"> <h6>I created a linker in MIPS with Professor Asanovic and Professor Stojanovic in CS61C.  My linker processes object files and generates an executable file.  It has two main tasks: combining code and relocating symbols.</h6>
+								<a href="http://inst.eecs.berkeley.edu/~cs61c/sp15/projs/01/part2.html" class="buttonprojsmaller">Spec</a>
+								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
+							</div>
+							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/alu.jpg" alt="" /></a></div>
+								<div class=""> <h5>Processor Design: ALU & RegFile</h5></div>
+								<div class="6u"> <h6>I created an ALU and Register File circuit design in Logisim with Professor Asanovic and Professor Stojanovic in CS61C.  My RegFile implements four registers: $t0, $t1, $t2, and $t3, and reads and writes values to these specific registers.  My ALU involves thirteen instructions including: sll, srl, sra, add, addu, sub, subu, and, or, slt, sltu, bitpal, and lfsr.</h6>
+								<a href="http://inst.eecs.berkeley.edu/~cs61c/sp15/projs/02/index.html" class="buttonprojsmaller">Spec</a>
+								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
+							</div>
+							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/cpu.jpg" alt="" /></a></div>
+								<div class=""> <h5>Processor Design: CPU & Memory</h5></div>
+								<div class="6u"> <h6>I created a 32-bit two-cycle processor with Professor Asanovic and Professor Stojanovic in CS61C.  My two-cycle pipelined CPU involves the entire datapath including my RegFile, ALU, Control Unit, Memory Unit, etc.  My data memory unit is responsible for loading and storing from and to memory.</h6>
+								<a href="http://inst.eecs.berkeley.edu/~cs61c/sp15/projs/02/index.html" class="buttonprojsmaller">Spec</a>
+								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
+							</div>
+							<header>
 								<h4> <span> <a href="http://www-inst.eecs.berkeley.edu/~cs61b/fa14/">CS61B: Data Structures and Advanced Programming </a></span></h4>
 							</header>
 							<div class="row">
