Added project to class projects

--- a/classproj.html
+++ b/classproj.html
@@ -116,8 +116,15 @@
 							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/cpu.jpg" alt="" /></a></div>
 								<div class=""> <h5>Processor Design: CPU & Memory</h5></div>
-								<div class="6u"> <h6>I created a 32-bit two-cycle processor with Professor Asanovic and Professor Stojanovic in CS61C.  My two-cycle pipelined CPU involves the entire datapath including my RegFile, ALU, Control Unit, Memory Unit, etc.  My data memory unit is responsible for loading and storing from and to memory.</h6>
+								<div class="6u"> <h6> I created a 32-bit two-cycle processor with Professor Asanovic and Professor Stojanovic in CS61C.  My two-cycle pipelined CPU involves the entire datapath including my RegFile, ALU, Control Unit, Memory Unit, etc.  My data memory unit is responsible for loading and storing from and to memory. </h6>
 								<a href="http://inst.eecs.berkeley.edu/~cs61c/sp15/projs/02/index.html" class="buttonprojsmaller">Spec</a>
+								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
+							</div>
+							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/cat.jpg" alt="" /></a></div>
+								<div class=""> <h5>Convolutional Neural Networks</h5></div>
+								<div class="6u"> <h6>I had to apply performance optimization techniques to the real-world problem of classifying images using a Convolutional Neural Network (CNN) in CS61C with Professor Asanovic and Professor Stojanovic.  These techniques included vectorization with SIMD instructions, parallelism with OpenMP, speed up calculations using Amdahl's Law, etc. My program was given a large number of 32x32 images and had to determine whether or not each of them contained a cat.</h6>
+								<a href="http://inst.eecs.berkeley.edu/~cs61c/sp15/projs/03/index.html" class="buttonprojsmaller">Spec</a>
 								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
 							</div>
 							<header>
